Refactor: move more logic into Instrumenter